Backport test for #20326 to Java 8